test/e2e/invalid/arithmetic.mylang
{
define x of int16 = 1;
define y of int16 = x + 3;
print(y);
}
